@startuml
'https://plantuml.com/class-diagram

class Main {
-Scanner scanner
-Facade facade
+{static}void main(String[])
+void run()
+void menu()
-void startPrintQueue()
-void changePrintStrategy()
-void registerPrintCompletion()
-void addNewPrintTask()
-void showPendingPrintTasks()
+void showPrints()
+void showSpools()
+void showPrinters()
+int menuChoice(int)
+int numberInput(int, int)
}

interface FileReader {
    +JSONArray readFile(String filePath)
}

class CSVAdapter implements FileReader {
    +JSONArray readFile(String filePath)
}

class Reader  {
+ArrayList<Print> readPrintsFromFile(String)
+ArrayList<Printers> readPrintersFromFile(String)
+ArrayList<Spools> readSpoolsFromFile(String)
-Printer parsePrinter(JSONObject)
-Print parsePrint(JSONObject)
-Spool parseSpool(JSONObject)
}

Main::menuChoice *.. Facade
Main::initialize *.. Reader

+class PrinterManager{
-List<Printer> printers
-List<Printer> freePrinters
-List<Spool> spools
-List<Spool> freeSpools
-List<Print> prints
-List<PrintTask> pendingPrintTasks
-Map<Printer, PrintTask> runningPrintTasks
+void addPrinter(int, int, String, String, int, int, int, int)
+boolean containsSpool(List<Spool>, String)
+void selectPrintTask(printer)
-PrintTask getPrintTask(Printer, PrintTask, PrintTask)
+void startInitialQueue()
+void addPrint(Print)
+List<Print> getPrints()
+List<Printer> getPrinters()
+Print findPrint(String)
+PrintTask getPrinterCurrentTask(Printer)
+Map<Printer, PrintTask> getAllRunningTasks()
+List<PrintTask> getPendingPrintTasks()
+void addPendingPrintTask(PrintTask)
+void addSpool(Spool)
+List<Spool> getSpools()
}

+class Facade{
+void initialize()
+void changePrintStrategy(int)
+void addPrintTask(String, List<String>, FilamentType)
+void registerPrintCompletion(int)
+void removeTask(Map<Printer, PrintTask>, PrintTask)
+void startPrintqueue()
+List<Printer> getPrinters()
+List<Print> getPrints()
+List<Spool> getSpools()
+List<PrintTask> getPendingPrintTasks()
+PrintTask getPrinterCurrentTask(Printer printer)
+String getCurrentStrategy()
-int getPrinterType(Printer)
}
Facade::runningTasks *-- Printer
Facade::runningTasks *-- PrintTask
Facade o-- PrinterManager
Facade o-- PrintTask

+class PrintTask{
-Print print
-List<String> colors
-FilamentType filamentType
+String toString()
+List<String> getColors()
+List<PrintTask> getPendingPrintTasks()
+FilamentType getFilamentType()
+Print getPrint()
+PrintTask getPrinterCurrentTask(Printer, printers)
}

PrintTask::print *.. Print
PrintTask::filamentType *.. FilamentType

+enum FilamentType{
    PLA
    PETG
    ABS
}

+abstract class Printer{
- int id
-String name
-String manufacturer
+ int getId()
+ String getName()
- final int maxX;
- final int maxY;
- final int maxZ;
- Spool currentSpool;
+ {abstract} int CalculatePrintTime(String)
+ {abstract} void setCurrentSpools(ArrayList<Spool>)
+ {abstract} boolean printFits(Print)
+String toString()

}
Printer::currentSpool *-- Spool

+class Print{
-String name
- int height
- int width
- int length
- List<Double> filamentLength
- int printTime
+ String getName()
+ int getHeight()
+ int getWidth()
+ int getlength()
+ List<Double> getFilamentLength()
+ int getPrintTime()
}

+class Spool{
- final int id;
- final String color;
- final FilamentType filamentType;
-double length;
+int getId()
+double getLength()
+String getColor()
+FilamentType getFilamentType()
+ boolean spoolMatch()
+boolean reduceLength()
}

Spool::filamentType o-- FilamentType


-class StandardFDM{
+void setCurrentSpool(Spool spool)
+Spool getCurrentSpool()
+ArrayList<Spool> getCurrentSpools()
+boolean printFits(Print print)
+StandardFDM createNewFDMPrinter(String[] printerValues)
+String toString()
}

Printer *-- StandardFDM

-class MultiColor{
- int maxColors;
- ArrayList<Spool> spools
+void setCurrentSpools((ArrayList<Spool>)
+ArrayList<Spool> getCurrentSpools()
+MultiColor createNewMultiColorPrinter(String[] printerValues)
}
Printer <-- MultiColor
MultiColor::spools <-- Spool

+class PrinterFactory{
Printer createNewPrinter(String type, String[] printerValues)
}
PrinterManager::addPrinter --> PrinterFactory
PrinterFactory --> StandardFDM::createNewFDMPrinter
PrinterFactory --> MultiColor::createNewMultiColorPrinter

@enduml
